--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Site que vê o período do dia e muda imagem e cores">
     <link rel="stylesheet" href="Css/style.css">
+    <link rel="shortcut icon" href="./Assets/favicon.ico" type="image/x-icon">
     <title>| Em qual período do dia está? |</title>
 </head>
-<body onload="carregarVariavel()">
+
+<body onload="carregar()">
     <header>
         <h1>|Período do Dia|</h1>
     </header>
@@ -15,13 +19,14 @@
             <div id="msg">
             </div>
             <div id="foto">
-                <img id= "imagem" src="./Assets/manha.jpg" alt="Paisagem manhã">
+                <img id="imagem" src="./Assets/manha.jpg" alt="Paisagem manhã">
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; Desenvolvido por Maicon Dante</p>
+        <p>&copy; Desenvolvido por <a href="https://github.com/MaiconDante"><strong>Maicon Dante</strong></a></p>
     </footer>
     <script src="Js/script.js"></script>
 </body>
+
 </html>
